# duatic_gamepad_interface

./: README.md  repos.list
.github/workflows/: build-jazzy.yml  build-kilted.yml  build-lyrical.yml  build-rolling.yml  pre-commit.yml  reusable_ici.yml
duatic_gamepad_interface/: package.xml  setup.cfg  setup.py
duatic_gamepad_interface/config/: gamepad_config.yaml
duatic_gamepad_interface/duatic_gamepad_interface/: controller_manager.py  main.py
duatic_gamepad_interface/duatic_gamepad_interface/controllers/: base_controller.py  cartesian_controller.py  freedrive_controller.py  gripper_controller.py  joint_trajectory_controller.py  mecanum_controller.py  platform_velocity_controller.py
duatic_gamepad_interface/duatic_gamepad_interface/utils/: gamepad_feedback.py
dynaarm_gamepad_interface/: setup.py
dynaarm_gamepad_interface/dynaarm_gamepad_interface/: main.py
dynaarm_gamepad_interface/dynaarm_gamepad_interface/controllers/: base_controller.py  cartesian_controller.py  freedrive_controller.py  gripper_controller.py  joint_trajectory_controller.py  mecanum_controller.py
