<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_gamepad_interface</name>
  <version>1.0.0</version>
  <description>Modular gamepad interface using ROS 2.</description>

  <author email="tschwarzer@duatic.com">Timo Schwarzer</author>
  <maintainer email="tschwarzer@duatic.com">Timo Schwarzer</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>duatic_helpers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>python3-types-pyyaml</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
